--- a/cotf.csproj
+++ b/cotf.csproj
@@ -53,6 +53,10 @@
     <Resource Include="Textures\temp.png" />
     <Resource Include="Textures\temp90.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Item\Prefix\" />
+    <Folder Include="Item\Suffix\" />
+  </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
