--- a/cotf.csproj
+++ b/cotf.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
@@ -6,6 +6,7 @@
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
     <UseWindowsForms>true</UseWindowsForms>
+	<ImplicitUsings>true</ImplicitUsings>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
@@ -31,7 +32,6 @@
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
-    <ProjectReference Include="E:\hidden\desktop\Apps\src\CirclePrefect dll\CirclePrefect.csproj" />
 	  <Referece Include="System.Drawing.Common">
 		  <HintPath>C:\Program Files (x86)\dotnet\shared\Microsoft.WindowsDesktop.App\6.0.6\System.Drawing.Common.dll</HintPath>
 	  </Referece>
@@ -56,6 +56,17 @@
   <ItemGroup>
     <Folder Include="Item\Prefix\" />
     <Folder Include="Item\Suffix\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Native">
+      <HintPath>..\..\..\Downloads\Native.dll</HintPath>
+    </Reference>
+    <Reference Include="RUDD.Dotnet">
+      <HintPath>..\..\..\Downloads\RUDD.Dotnet.dll</HintPath>
+    </Reference>
+    <Reference Include="tUserInterface">
+      <HintPath>..\..\..\Downloads\tUserInterface.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
