--- a/cotf.csproj
+++ b/cotf.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RollForward>Major</RollForward>
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
@@ -67,6 +67,9 @@
     </Reference>
     <Reference Include="RUDD.Dotnet">
       <HintPath>..\..\..\Downloads\RUDD.Dotnet.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Drawing.Common">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\tModLoader\Libraries\system.drawing.common\6.0.0\lib\net6.0\System.Drawing.Common.dll</HintPath>
     </Reference>
     <Reference Include="tUserInterface">
       <HintPath>..\..\..\Downloads\tUserInterface.dll</HintPath>
